--- a/example-widget/index.html
+++ b/example-widget/index.html
@@ -133,8 +133,8 @@
                     onLoad: function (userSessionHandle) {
                     },
                     //(optional)user does a resize
-                    onResize: function (userSessionHandle, paramters) {
-                        console.log(paramters);
+                    onResize: function (userSessionHandle, parameters) {
+                        console.log(parameters);
                     },
                     //(required)
                     onSave: doSave,
