clearified docs from localhost to api endpoint

--- a/example-widget/index.html
+++ b/example-widget/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
         <!-- BoxItNow CSS -->
-        <link rel="stylesheet" type="text/css" href="http://localhost/css/bin.cache.min.css" />
+        <link rel="stylesheet" type="text/css" href="http://[API ENDPOINT]/css/bin.cache.min.css" />
 
         <!-- BoxItNow JS -->
-        <script type="text/javascript" src="http://localhost/js/bin.bootstrap.min.js"></script>
+        <script type="text/javascript" src="http://[API ENDPOINT]/js/bin.bootstrap.min.js"></script>
 
         <!-- CLIENT CSS -->
         <!--<link rel="stylesheet" type="text/css" href="spectrum.css" />-->
@@ -97,7 +97,7 @@
             //LOAD bin libraries
             BIN.Bootstrap.load({
                 //the root of the BIN HOST site
-                apiUrl: 'http://localhost/',
+                apiUrl: 'http://[API ENDPOINT]/',
                 apiKey: "h0Hka2hpZcio4WOw"
 
             }, function () {
