added views options

--- a/example-widget/index.html
+++ b/example-widget/index.html
@@ -119,6 +119,8 @@
                         //(optional)
                         parameters: {Length: "20.1", }
                     },
+                    //this controls the view ui
+                    views : ['3d', 'outside', 'inside', 'cad', 'details', 'fullscreen', '2nd_view'],
                     //(optional) for loading for design studio
                     options: {
                         //all optional default is true
