added number trim option

--- a/example-widget/index.html
+++ b/example-widget/index.html
@@ -138,6 +138,7 @@
           //default: modules:['mod_advanced']
           resizer: {
             enabled: true,
+            trimParams : true,
             modules: ['mod_advanced']
           },
           //default: modules:['mod_graphics','mod_standard', 'mod_text', 'mod_color','mod_litho']
