--- a/example-widget/index.html
+++ b/example-widget/index.html
@@ -106,6 +106,11 @@
           user: {
             saving: "normal"
           },
+          ui : {
+            saveButtonText : "SAVE DESIGN",
+            saveProgressText : "SAVING...",
+            saveFinishText : "DESIGN SAVED",
+          },
           form: {
             pdfPreview: true,
             fields: {
