Added patterns example

--- a/example-widget/index.html
+++ b/example-widget/index.html
@@ -181,7 +181,7 @@
               graphics: {
                 enabled: true,
                 useKraft: false,
-                modules: ['mod_standard', 'mod_graphics', 'mod_text', 'mod_color']
+                modules: ['mod_standard', 'mod_graphics', 'mod_text', 'mod_color','mod_panel', 'mod_pattern']
               }
             },
 		onSave : function() {
