--- a/example-widget/boxes.html
+++ b/example-widget/boxes.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="http://localhost/boxitnow/css/bin.cache.min.css" />
 
   <!-- BoxItNow JS -->
-  <script type="text/javascript" src="http://localhost/boxitnow/js/bin.bootstrap.min.js"></script>
+  <script type="text/javascript" src="http://localhost/boxitnow/js/bin.bootstrap.js"></script>
 
   <!-- CLIENT CSS -->
   <!--<link rel="stylesheet" type="text/css" href="spectrum.css" />-->
@@ -89,7 +89,7 @@
       //the root of the BIN HOST site
 	  //http://localhost/bindev/
 	  //https://staging.boxitnow.com/
-      apiUrl: 'https://localhost/boxitnow/',
+      apiUrl: 'http://localhost/boxitnow/',
       apiKey: "VGL6TmfXuFMprVPy"
 
     }, function() {
@@ -97,13 +97,13 @@
       //Begin create studio
       BIN.Widgets.Create({
         //can be: 'viewer' (3d viewer), 'studio' (3d design studio) , 'boxes' (My Boxes), 'media' (Media Manager)
-        type: 'studio',
+        type: 'boxes',
         //(require)Html div to attach the widget to
         tag: $('#studio'),
         //(optional) required if loading user design, user media or user projects
         userToken: '2328e16dcef34fe4cb54a57aace29d05',
         //(require for design studio)design information to load
-        design: {
+        /*design: {
           //(require) 'standard' or 'user'
           type: 'standard',
           //(require) id of item or resize
@@ -138,12 +138,10 @@
                 modules: ['mod_share']
               },
               views: {
-                //to entirely disable a view, remove it from this list
-                //values from this list will be used as the title for the respective section
-                //null gives the default title
                 '3d': '3D',
                 'outside': 'Outside View',
                 'inside': 'Inside View',
+                'cad': null,
                 'details': null,
                 'fullscreen': null,
                 '2nd_view': null
@@ -183,7 +181,7 @@
               graphics: {
                 enabled: true,
                 useKraft: false,
-                modules: ['mod_standard', 'mod_graphics', 'mod_text', 'mod_color','mod_panel', 'mod_pattern']
+                modules: ['mod_standard', 'mod_graphics', 'mod_text', 'mod_color', 'mod_panel', 'mod_pattern']
               }
             },
 		onSave : function() {
@@ -194,7 +192,7 @@
         //(optional)user does a resize
         onResize: function(userSessionHandle, parameters) {
           console.log(parameters);
-        },
+        },*/
         //(required)
 
       });
