--- a/example-widget/studio.html
+++ b/example-widget/studio.html
@@ -89,7 +89,7 @@
       //the root of the BIN HOST site
 	  //http://localhost/bindev/
 	  //https://staging.boxitnow.com/
-      apiUrl: 'http://localhost/boxitnow/',
+      apiUrl: 'http://dev.boxitnow.com/',
       apiKey: "VGL6TmfXuFMprVPy"
 
     }, function() {
@@ -147,9 +147,9 @@
                 '2nd_view': null
               },
               tabs: {
-                    measurements : 'Default Dimensions',
-                    graphics : 'Default Graphics',
-                    export : 'Default <br /> Share',
+                measurements : 'Default Dimensions',
+                graphics : 'Default Graphics',
+                export : 'Default Share',
               },
               form: {
                 fields: {
