--- a/example-widget/studio.html
+++ b/example-widget/studio.html
@@ -146,6 +146,7 @@
                 'fullscreen': null,
                 '2nd_view': null
               },
+              //removing a tab entirely will default to BIN labels
               tabs: {
                 measurements : 'Default Dimensions',
                 graphics : 'Default Graphics',
