--- a/example-widget/viewer.html
+++ b/example-widget/viewer.html
@@ -42,7 +42,16 @@
                         type: 'standard',
                         //(require) id of item or resize
                         id: 60,
-                    }
+                    },
+
+                    options:{
+                        //rotate on start (inverted)
+                        rotate: true,
+                        //Initial rotate speed (radians)
+                        rotateSpeed: .005,
+                        //Initial viewing angle (degrees)
+                        startAngle: 45,
+                      }
                 });
             });
         </script>
